<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Churrasquinho</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_editar">Meus Churras</string>
    <string name="title_activity_iniciar">Convidados</string>
    <string name="iniciar">Iniciar</string>
    <string name="editar">Editar</string>
    <string name="title_activity_carne">Carnes</string>
    <string name="title_activity_bebida">Bebidas</string>
    <string name="homem">Homens</string>
    <string name="mulher">Mulheres</string>
    <string name="crianca">Crianças</string>
    <string name="continuar">Prosseguir</string>
    <string name="cadCarne">Adicionar Carnes</string>
    <string name="cadBebida">Adicionar Bebidas</string>
    <string name="cadAcompanhamento">Cadastrar Acompanhamentos</string>
    <string name="cadOutro">Cadastrar Despesas</string>
    <string name="cadItem">Cadastrar Itens</string>
    <string name="cifrao">R$: </string>
    <string name="total"></string>
    <string name="title_activity_convidados">Quantidade de Convidados</string>
    <string name="zero">0</string>
    <string name="title_activity_acompanhamento">Acompanhamentos</string>
    <string name="title_activity_outro">Outras Despesas</string>
    <string name="title_activity_inserir">Cadastrar</string>
    <string name="title_activity_inserir_carne">Cadastrar Carne</string>
    <string name="title_activity_resumo">Resumo do Churras</string>
    <string name="title_activity_finalizar">Finalizar Churrasco</string>
    <string name="salvar">Salvar Churrasco</string>
    <string name="compartilhar">Chamar a Galera</string>
    <string name="nomeChurras">Título</string>
    <string name="dataChurras">00/00/0000</string>
    <string name="nome">Item  </string>
    <string name="quantidade">Quantidade</string>
    <string name="valorUn">Valor Unitário</string>
    <string name="valorTtl">Valor Total</string>
    <string name="title_activity_exemplo">Exemplo</string>
    <string name="localizacao">Localização</string>
    <string name="title_activity_local">Localização</string>
    <string name="endereco">Endereço: </string>
    <string name="btnBuscar">Buscar</string>
    <string name="referencia">Ponto de Referência:</string>
    <string name="uf">UF:</string>
    <string name="cidade">Cidade:</string>
    <string name="complemento">Complemento:</string>
    <string name="bairro">Bairro:</string>
    <string name="numero">Número:</string>
    <string name="informe_cep">Informe o CEP:</string>
    <string name="inserir">Inserir</string>
    <string name="inserirEnd">Inserir Endereço</string>
    <string name="finalizar">Fazer Rateio</string>
    <string name="local">Local do Churras:</string>
    <string name="cep">CEP</string>
    <string name="inf_data">Data do Churras:</string>
    <string name="tipo">Tipo:</string>

    <string-array name="carnes">
            <item>Bovino Com Osso</item>
            <item>Bovino Sem Osso</item>
            <item>Frango</item>
            <item>Suino</item>
            <item>Embutido</item>
        </string-array>

        <string-array name="bebidas">
            <item>Lata 269ml</item>
            <item>Lata 350ml</item>
            <item>Latão 473ml</item>
            <item>Latão 550ml</item>
            <item>Long Neck 250ml</item>
            <item>Long Neck 275ml</item>
            <item>Long Neck 355ml</item>
            <item>Garrafa 300ml</item>
            <item>Garrafa 500ml</item>
            <item>Garrafa 600ml</item>
            <item>Garrafa 970ml</item>
            <item>Garrafa 1L</item>
            <item>Garrafa 1,5L</item>
            <item>Garrafa 2L</item>
            <item>Garrafa 2,5L</item>
            <item>Garrafa 3L</item>
        </string-array>

        <string-array name="tipoBebida">
            <item>Alcoólica</item>
            <item>Não Alcoólica</item>
        </string-array>

        <string-array name="acompanhamentos">
            <item>Valor por Grama</item>
            <item>Valor por Quilo</item>
        </string-array>

        <string-array name="outros">
            <item>Valor Fixo</item>
            <item>Valor Variável</item>
        </string-array>

</resources>
