    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="#ffefdfc6">


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:text="@string/informe_cep"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />


            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <br.com.e3.churrasquinho.mascaraCep
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/etCep"
                    android:layout_gravity="fill_horizontal|center"
                    android:textAlignment="center"
                    android:ems="5" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnBuscar"
                    android:id="@+id/btnBuscar"
                    android:layout_below="@+id/txtCidade"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="fill_horizontal|center" />

            </GridLayout>


                <TextView
                    android:text="@string/endereco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etLogradouro"
                    android:layout_below="@+id/txtCidade"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/numero"
                    android:id="@+id/textView3" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtNumero"
                    android:inputType="number" />

                <TextView
                    android:text="@string/bairro"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etBairro"
                    android:layout_below="@+id/txtCidade"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:text="@string/cidade"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etCidade"
                    android:layout_below="@+id/txtCidade"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:text="@string/uf"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etUf"
                    android:layout_below="@+id/txtCidade"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/referencia"
                    android:id="@+id/textView2" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtReferencia" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/salvar"
                    android:id="@+id/btnSalvarEndereco"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
