<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.e3.churrasquinho.ResumoActivity"    android:background="#ffefdfc6">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblResumo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/lbl_resumo"
        />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="90dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/lblResumo"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/linearLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/txtCarnes" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/vlrCarnes"
                android:textStyle="bold"
               />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/line"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/txtBebidas" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/vlrBebidas"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/line"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/txtAcompanhamentos" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/vlrAcompanhamentos"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/line"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/txtDespesas" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/vlrDespesas"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/line"
                android:id="@+id/line"
                android:layout_marginTop="10dp"/>

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/local"
                    android:id="@+id/txtLocal"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="left" />

                <ImageView
                    android:src="@drawable/data"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/txtData"
                    android:layout_marginTop="10dp"
                    />

            </GridLayout>

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/endereco"
                    android:id="@+id/txtEndereco"
                    android:layout_gravity="left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/numero"
                    android:id="@+id/txtNumero" />

            </GridLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/bairro"
                android:id="@+id/txtBairro"
                android:layout_below="@+id/scrollView2"
                android:layout_alignParentStart="true" />

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/cidade"
                    android:id="@+id/txtCidade"
                    android:layout_gravity="left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/uf"
                    android:id="@+id/txtUf" />
            </GridLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/cep"
                android:id="@+id/txtCep" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/referencia"
                android:id="@+id/txtReferencia" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        Button
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/editar"
            android:id="@+id/btnEditarResumo"
            android:gravity="center|center_vertical"
            android:layout_gravity="center"
            android:background="#ff000000"
            android:textColor="#ffefdfc6"
            android:textSize="15sp"
            android:drawableRight="@drawable/ic_edit"
            android:padding="10dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/localizacao"
            android:id="@+id/btnLocalizacao"
            android:gravity="center|center_vertical"
            android:layout_gravity="center"
            android:background="#ff000000"
            android:textColor="#ffefdfc6"
            android:textSize="15sp"
            android:drawableRight="@drawable/location"
            android:padding="10dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/finalizar"
            android:id="@+id/btnProsResumo"
            android:gravity="center|center_vertical"
            android:layout_gravity="center"
            android:background="#ff000000"
            android:textColor="#ffefdfc6"
            android:textSize="15sp"
            android:drawableRight="@drawable/next"
            android:paddingRight="10dp"
            />

    </LinearLayout>


</RelativeLayout>
